# ForgeLM

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config_template.yaml  docker-compose.yaml  pyproject.toml  safety_config.yaml  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml  usermanuals-validate.yml
docs/: product_strategy-tr.md  product_strategy.md  roadmap-tr.md  roadmap.md
docs/design/: blackwell_optimized.md  data_audit_cli_split.md  gdpr_erasure.md  iso27001_soc2_alignment.md  library_api.md
docs/guides/: air_gap_deployment-tr.md  air_gap_deployment.md  alignment-tr.md  alignment.md  cicd_pipeline-tr.md  cicd_pipeline.md  data_audit-tr.md  data_audit.md  gdpr_erasure-tr.md  gdpr_erasure.md  getting-started-tr.md  getting-started.md  human_approval_gate-tr.md  ingestion-tr.md  ingestion.md  iso_soc2_deployer_guide-tr.md  iso_soc2_deployer_guide.md  library_api-tr.md  library_api.md  performance-tr.md  performance.md  pipeline-tr.md  pipeline.md  quickstart-tr.md  quickstart.md  safety_compliance-tr.md  safety_compliance.md  troubleshooting-tr.md  troubleshooting.md
docs/qms/: README-tr.md  access_control-tr.md  access_control.md  encryption_at_rest-tr.md  encryption_at_rest.md  risk_treatment_plan-tr.md  risk_treatment_plan.md  sop_change_management-tr.md  sop_change_management.md  sop_data_management-tr.md  sop_data_management.md  sop_incident_response-tr.md  sop_incident_response.md  statement_of_applicability-tr.md  statement_of_applicability.md
docs/reference/: approvals_subcommand-tr.md  approve_subcommand-tr.md  architecture-tr.md  architecture.md  audit_event_catalog-tr.md  audit_event_catalog.md  compliance_summary-tr.md  compliance_summary.md  configuration-tr.md  configuration.md  data_ingestion_architecture-tr.md  data_ingestion_architecture.md  doctor_subcommand-tr.md  doctor_subcommand.md  iso27001_control_mapping-tr.md  iso27001_control_mapping.md  library_api_reference-tr.md  library_api_reference.md  purge_subcommand-tr.md  reverse_pii_subcommand-tr.md  reverse_pii_subcommand.md  safety_eval_subcommand-tr.md  safety_eval_subcommand.md  soc2_trust_criteria_mapping-tr.md  soc2_trust_criteria_mapping.md  supply_chain_security-tr.md  supply_chain_security.md  usage-tr.md  usage.md  verify_annex_iv_subcommand-tr.md  verify_annex_iv_subcommand.md  verify_audit-tr.md  verify_audit.md  verify_gguf_subcommand-tr.md  verify_gguf_subcommand.md  verify_integrity_subcommand-tr.md  verify_integrity_subcommand.md  webhook_schema-tr.md  webhook_schema.md
docs/roadmap/: completed-phases.md  phase-14-5-pipeline-hardening.md  releases.md  risks-and-decisions.md
docs/standards/: README.md  architecture.md  code-review.md  coding.md  documentation.md  error-handling.md  localization.md  logging-observability.md  regex.md  release.md  testing.md
docs/usermanuals/: _meta.yaml
forgelm/: __init__.py  __main__.py  _http.py  _pypdf_normalise.py  _script_sanity.py  _strip_pattern.py  _version.py  benchmark.py  chat.py  compliance.py  config.py  data.py  deploy.py  export.py  fit_check.py  grpo_rewards.py  inference.py  ingestion.py  judge.py  merging.py  model.py  model_card.py  quickstart.py  results.py  safety.py  synthetic.py  trainer.py  utils.py  verify.py  webhook.py
forgelm/cli/: __init__.py  __main__.py  _abi_check.py  _argparse_types.py  _dispatch.py  _dry_run.py  _exit_codes.py  _no_train_modes.py  _parser.py  _pipeline.py  _result.py  _resume.py  _training.py  _wizard.py
forgelm/data_audit/: __init__.py  _aggregator.py  _croissant.py  _pii_ml.py  _pii_regex.py  _secrets.py  (+5 more)
notebooks/: data_curation.ipynb  dpo_alignment.ipynb  galore_memory_optimization.ipynb  grpo_reasoning.ipynb  ingestion_playground.ipynb  kto_binary_feedback.ipynb  multi_dataset.ipynb  post_training_workflow.ipynb  quickstart_sft.ipynb  safety_evaluation.ipynb  synthetic_data_training.ipynb
site/: README.md  compliance.html  contact.html  features.html  guide.html  index.html  privacy.html  quickstart.html  terms.html
tests/: conftest.py  test_approvals_listing.py  test_audit_pii_gate.py  test_audit_secrets_gate.py  test_benchmark.py  test_cache_subcommands.py  test_chat.py  test_check_anchor_resolution.py  test_check_audit_event_catalog.py  test_check_bilingual_code_blocks.py  test_check_bilingual_parity.py  test_check_cli_exit_code_prose.py  test_check_cli_help_consistency.py  test_check_deprecation_targets.py  test_check_doc_numerical_claims.py  test_check_field_descriptions.py  test_check_http_discipline.py  test_check_import_origin.py  test_check_library_api_doc.py  test_check_module_size.py  test_check_no_unguarded_sys_modules_pop.py  test_check_notebook_pins.py  test_check_pip_audit.py  test_check_readme_links.py  test_check_release_record_sync.py  test_check_site_chrome_parity.py  test_check_skill_mirror_parity.py  test_check_source_path_refs.py  test_check_tr_links_prefer_mirror.py  test_check_usermanual_schema_drift.py  test_check_wizard_defaults_sync.py  test_check_yaml_snippets.py  test_cli.py  test_cli_helpers.py  test_cli_phase10.py  test_cli_quickstart_wiring.py  test_cli_subcommands.py  test_cli_training_seam.py  test_compliance.py  test_config.py  (+69 more)
tools/: check_anchor_resolution.py  check_audit_event_catalog.py  check_bilingual_code_blocks.py  check_bilingual_parity.py  check_cli_exit_code_prose.py  check_cli_help_consistency.py  check_deprecation_targets.py  check_doc_numerical_claims.py  check_field_descriptions.py  check_http_discipline.py  check_import_origin.py  check_module_size.py  check_no_analysis_refs.py  check_no_unguarded_sys_modules_pop.py  check_notebook_pins.py  check_pip_audit.py  check_readme_links.py  check_release_record_sync.py  check_skill_mirror_parity.py  check_source_path_refs.py  check_tr_links_prefer_mirror.py  check_usermanual_schema_drift.py  check_usermanual_self_contained.py  check_wizard_defaults_sync.py  generate_sbom.py  generate_wizard_defaults.py  pip_audit_ignores.yaml
(+158 files in other folders)
